<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/label_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/nome_aluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barbara"
        app:layout_constraintStart_toEndOf="@id/label_nome"
        app:layout_constraintTop_toTopOf="@id/label_nome">
    </TextView>

    <TextView
        android:id="@+id/label_documento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/documento"
        app:layout_constraintStart_toStartOf="@id/label_nome"
        app:layout_constraintTop_toBottomOf="@id/label_nome"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/documento_aluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valorDocumento"
        app:layout_constraintStart_toEndOf="@id/label_documento"
        app:layout_constraintTop_toBottomOf="@id/nome_aluno">
    </TextView>

    <Button
        android:id="@+id/buttonDesmatricular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDesmatricularAluno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_nome">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>